projects/vb6parse/snapshots/tests/library/objects/getobject/getobject_nested_property.snap
---
source: projects/vb6parse/tests/library/objects/getobject.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: AssignmentStatement
      children:
        - kind: IdentifierExpression
          children:
            - kind: Identifier
              text: value
        - kind: Whitespace
          text: " "
        - kind: EqualityOperator
          text: "="
        - kind: Whitespace
          text: " "
        - kind: MemberAccessExpression
          children:
            - kind: CallExpression
              children:
                - kind: MemberAccessExpression
                  children:
                    - kind: CallExpression
                      children:
                        - kind: MemberAccessExpression
                          children:
                            - kind: CallExpression
                              children:
                                - kind: Identifier
                                  text: GetObject
                                - kind: LeftParenthesis
                                  text: (
                                - kind: ArgumentList
                                  children:
                                    - kind: Argument
                                      children:
                                        - kind: IdentifierExpression
                                          children:
                                            - kind: Identifier
                                              text: filePath
                                - kind: RightParenthesis
                                  text: )
                            - kind: PeriodOperator
                              text: "."
                            - kind: Identifier
                              text: Worksheets
                        - kind: LeftParenthesis
                          text: (
                        - kind: ArgumentList
                          children:
                            - kind: Argument
                              children:
                                - kind: NumericLiteralExpression
                                  children:
                                    - kind: IntegerLiteral
                                      text: "1"
                        - kind: RightParenthesis
                          text: )
                    - kind: PeriodOperator
                      text: "."
                    - kind: Identifier
                      text: Range
                - kind: LeftParenthesis
                  text: (
                - kind: ArgumentList
                  children:
                    - kind: Argument
                      children:
                        - kind: StringLiteralExpression
                          children:
                            - kind: StringLiteral
                              text: "\"A1\""
                - kind: RightParenthesis
                  text: )
            - kind: PeriodOperator
              text: "."
            - kind: Identifier
              text: Value
